kotlin/semlang-parser/src/test/semlang/validatorTests/fail/functionCall3.sem
function myStuff.myFunction(): Integer {
  let myInt = Integer."1"
  myInt(Integer."3")
}
